test/corpus/bool_vector.txt
================================================================================
Boolean vector read syntax
================================================================================

#&3"\007"
#&10"\377\003"

--------------------------------------------------------------------------------

(source_file
  (bool_vector
    (string))
  (bool_vector
    (string)))
