test/corpus/bool_vectors.txt
================================================================================
Bool vector read syntax
================================================================================

#&8"\0"
#&2""
#&3"^G"

--------------------------------------------------------------------------------

(source_file
  (bool_vector
    (string))
  (bool_vector
    (string))
  (bool_vector
    (string)))
