test/corpus/bytecode_comment.txt
================================================================================
Byte-compiled file comments
================================================================================

#@3abcfoo
#@5éabcfoo

--------------------------------------------------------------------------------

(source_file
  (bytecode_comment)
  (symbol)
  (bytecode_comment)
  (symbol))
