test/corpus/char_table.txt
================================================================================
Character table read syntax
================================================================================

#^[nil t]
#^^[1 0 nil]

--------------------------------------------------------------------------------

(source_file
  (char_table
    (symbol)
    (symbol))
  (sub_char_table
    (integer)
    (integer)
    (symbol)))
