test/corpus/floats.txt
================================================================================
Float literals
================================================================================

1.0
-.1
3E5
1.0e+INF

--------------------------------------------------------------------------------

(source_file
  (float)
  (float)
  (float)
  (float))

================================================================================
Float literals with signed exponents
================================================================================

1e-5
1.5e-3
+15e2
.15e4
1500000e-3
1500.e3

--------------------------------------------------------------------------------

(source_file
  (float)
  (float)
  (float)
  (float)
  (float)
  (float))

================================================================================
Infinity and NaN literals
================================================================================

1.0e+INF
+1.0e+INF
-2e+INF
0.0e+NaN
+2.e+NaN
-.5e+NaN

--------------------------------------------------------------------------------

(source_file
  (float)
  (float)
  (float)
  (float)
  (float)
  (float))

================================================================================
Symbols that look like infinity and NaN (regression test)
================================================================================

1x0e+INF
0y0e+NaN

--------------------------------------------------------------------------------

(source_file
  (symbol)
  (symbol))
