test/corpus/hash_table.txt
================================================================================
Hash table read syntax
================================================================================

#s(hash-table 0)

--------------------------------------------------------------------------------

(source_file
  (hash_table
    (integer)))

================================================================================
Record read syntax
================================================================================

#s(foo bar)
#s(widget 1 [2])

--------------------------------------------------------------------------------

(source_file
  (record
    (symbol)
    (symbol))
  (record
    (symbol)
    (integer)
    (vector
      (integer))))
