test/corpus/lists.txt
================================================================================
Lists
================================================================================

()
(foo (bar))
(1 2 . nil)
(foo .)
(setq . 2)
`(progn . ,body)

--------------------------------------------------------------------------------

(source_file
  (list)
  (list
    (symbol)
    (list
      (symbol)))
  (list
    (integer)
    (integer)
    (dot)
    (symbol))
  (list
    (symbol)
    (symbol))
  (special_form
    (dot)
    (integer))
  (quote
    (special_form
      (dot)
      (unquote
        (symbol)))))

================================================================================
Malformed dotted lists
================================================================================

(. a)
(a . b c)
(a . b . c)

--------------------------------------------------------------------------------

(source_file
  (list
    (ERROR
      (dot))
    (symbol))
  (list
    (symbol)
    (dot)
    (symbol)
    (ERROR))
  (list
    (symbol)
    (dot)
    (symbol)
    (ERROR
      (dot))))
