test/corpus/quote.txt
================================================================================
Quotes
================================================================================

'foo
`bar
'(x ,y ,@z)

--------------------------------------------------------------------------------

(source_file
  (quote
    (symbol))
  (quote
    (symbol))
  (quote
    (list
      (symbol)
      (unquote
        (symbol))
      (unquote_splice
        (symbol)))))

================================================================================
Sharp quotes
================================================================================

#'bar
#'(lambda (x) x)
(mapcar #'(lambda (x) (1+ x)) xs)
'#'foo

--------------------------------------------------------------------------------

(source_file
  (function_quote
    (symbol))
  (function_quote
    (special_form
      (list
        (symbol))
      (symbol)))
  (list
    (symbol)
    (function_quote
      (special_form
        (list
          (symbol))
        (list
          (symbol)
          (symbol))))
    (symbol))
  (quote
    (function_quote
      (symbol))))
