test/corpus/records.txt
================================================================================
Record read syntax
================================================================================

#s(foo 1 2)

--------------------------------------------------------------------------------

(source_file
  (record
    (symbol)
    (integer)
    (integer)))

================================================================================
Record with no slots
================================================================================

#s(bar)

--------------------------------------------------------------------------------

(source_file
  (record
    (symbol)))

================================================================================
Hash tables use the same read syntax as other records
================================================================================

#s(hash-table 0)
#s(hash-table test eq data (a 1))
#s( hash-table test eq)

--------------------------------------------------------------------------------

(source_file
  (record
    (symbol)
    (integer))
  (record
    (symbol)
    (symbol)
    (symbol)
    (symbol)
    (list
      (symbol)
      (integer)))
  (record
    (symbol)
    (symbol)
    (symbol)))

================================================================================
Nested records
================================================================================

'#s(cl-struct-point #s(foo 1) [2])

--------------------------------------------------------------------------------

(source_file
  (quote
    (record
      (symbol)
      (record
        (symbol)
        (integer))
      (vector
        (integer)))))
