test/corpus/shebang.txt
================================================================================
Shebang line at the start of a script
================================================================================

#!/usr/bin/emacs --script
(message "hi")

--------------------------------------------------------------------------------

(source_file
  (comment)
  (list
    (symbol)
    (string)))

================================================================================
Shebang comments out the rest of the line wherever it occurs
================================================================================

(foo)
#!/bin/sh (not read)
(bar)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol))
  (comment)
  (list
    (symbol)))

================================================================================
Shebang inside a list
================================================================================

(a #!x
   b)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (comment)
    (symbol)))
