test/corpus/uninterned_symbols.txt
================================================================================
Uninterned symbols
================================================================================

#:foo
#:foo-bar
#:
(list #:a #:b)
'#:foo

--------------------------------------------------------------------------------

(source_file
  (symbol)
  (symbol)
  (symbol)
  (list
    (symbol)
    (symbol)
    (symbol))
  (quote
    (symbol)))
